fixed top icons breaking on smaller screen

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -174,6 +174,14 @@ section.frame {
     margin: 20px auto;
 }
 
+.about-buttons-box {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
+}
+
 .about-button {
     background: var(--reddish);
     color: var(--yellowish);
@@ -263,6 +271,7 @@ a.sort-by-btn:hover {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .credentials{
